--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.inversoft</groupId>
   <artifactId>barista</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.2</version>
   <packaging>jar</packaging>
 
   <name>Barista</name>
@@ -60,18 +60,30 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.10.1</version>
+      <version>2.13.2</version>
     </dependency>
     <dependency>
       <groupId>com.inversoft</groupId>
       <artifactId>restify</artifactId>
-      <version>3.3.0</version>
+      <version>3.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>5.0.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>30.1-jre</version>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>6.8.7</version>
+      <version>7.3.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
